{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 33,
  "lineage": "546ed5d6-c771-7d4d-d041-6be80355052b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075f7f45ed43aeb8e",
            "arn": "arn:aws:ec2:us-west-2:309656053523:elastic-ip/eipalloc-075f7f45ed43aeb8e",
            "domain": "vpc",
            "id": "eipalloc-075f7f45ed43aeb8e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-253-6-29.us-west-2.compute.amazonaws.com",
            "public_ip": "44.253.6.29",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-1"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6be0b24b5532e5e",
            "arn": "arn:aws:ec2:us-west-2:309656053523:elastic-ip/eipalloc-0a6be0b24b5532e5e",
            "domain": "vpc",
            "id": "eipalloc-0a6be0b24b5532e5e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-218-17-42.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.17.42",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-2"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00003b7036a5dd2cc",
            "arn": "arn:aws:ec2:us-west-2:309656053523:elastic-ip/eipalloc-00003b7036a5dd2cc",
            "domain": "vpc",
            "id": "eipalloc-00003b7036a5dd2cc",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-245-112-52.us-west-2.compute.amazonaws.com",
            "public_ip": "44.245.112.52",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-3"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:internet-gateway/igw-0e8ceeb1fbefaff1f",
            "id": "igw-0e8ceeb1fbefaff1f",
            "owner_id": "309656053523",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075f7f45ed43aeb8e",
            "association_id": "eipassoc-079c3cf887a5f7b45",
            "connectivity_type": "public",
            "id": "nat-08fa64dddfc0e8c4a",
            "network_interface_id": "eni-06c41ab877a01bfc3",
            "private_ip": "10.0.1.142",
            "public_ip": "44.253.6.29",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c9b29fac4e702f90",
            "tags": {
              "Name": "lesson-5-vpc-nat-gw-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6be0b24b5532e5e",
            "association_id": "eipassoc-06aebf76976e4532d",
            "connectivity_type": "public",
            "id": "nat-0cd3ed16593d2c0b2",
            "network_interface_id": "eni-04ceb5f79784dea0a",
            "private_ip": "10.0.2.31",
            "public_ip": "34.218.17.42",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0861ae4c41af30b60",
            "tags": {
              "Name": "lesson-5-vpc-nat-gw-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00003b7036a5dd2cc",
            "association_id": "eipassoc-0fa8505948130c6a3",
            "connectivity_type": "public",
            "id": "nat-055b19ca3d9c24d25",
            "network_interface_id": "eni-03fd022b20ea7e8b9",
            "private_ip": "10.0.3.144",
            "public_ip": "44.245.112.52",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0013853c42ac1fd33",
            "tags": {
              "Name": "lesson-5-vpc-nat-gw-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-gw-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:route-table/rtb-013ac7be6aa5d4edb",
            "id": "rtb-013ac7be6aa5d4edb",
            "owner_id": "309656053523",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08fa64dddfc0e8c4a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "rtb-013ac7be6aa5d4edb",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:route-table/rtb-0ee6bcf7e985f8083",
            "id": "rtb-0ee6bcf7e985f8083",
            "owner_id": "309656053523",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd3ed16593d2c0b2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "rtb-0ee6bcf7e985f8083",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:route-table/rtb-0b384fe499ffcb2bb",
            "id": "rtb-0b384fe499ffcb2bb",
            "owner_id": "309656053523",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-055b19ca3d9c24d25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "rtb-0b384fe499ffcb2bb",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:route-table/rtb-00c00201b66df5384",
            "id": "rtb-00c00201b66df5384",
            "owner_id": "309656053523",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8ceeb1fbefaff1f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "rtb-00c00201b66df5384",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090223f5e8dcd41de",
            "region": "us-west-2",
            "route_table_id": "rtb-013ac7be6aa5d4edb",
            "subnet_id": "subnet-0c613fc9408024416"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06871cbccb988128f",
            "region": "us-west-2",
            "route_table_id": "rtb-0ee6bcf7e985f8083",
            "subnet_id": "subnet-00906bae756c8c920"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2d71de6a7ae1f77",
            "region": "us-west-2",
            "route_table_id": "rtb-0b384fe499ffcb2bb",
            "subnet_id": "subnet-08fe30712de6f4567"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0711974706a782ef6",
            "region": "us-west-2",
            "route_table_id": "rtb-00c00201b66df5384",
            "subnet_id": "subnet-0c9b29fac4e702f90"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0501a03888c71bfa6",
            "region": "us-west-2",
            "route_table_id": "rtb-00c00201b66df5384",
            "subnet_id": "subnet-0861ae4c41af30b60"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f1213b0dc535006",
            "region": "us-west-2",
            "route_table_id": "rtb-00c00201b66df5384",
            "subnet_id": "subnet-0013853c42ac1fd33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:subnet/subnet-0c613fc9408024416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c613fc9408024416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309656053523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "subnet-0c613fc9408024416",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:subnet/subnet-00906bae756c8c920",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00906bae756c8c920",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309656053523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "subnet-00906bae756c8c920",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:subnet/subnet-08fe30712de6f4567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fe30712de6f4567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309656053523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-private-us-west-2c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-us-west-2c"
            },
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "subnet-08fe30712de6f4567",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:subnet/subnet-0c9b29fac4e702f90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9b29fac4e702f90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "309656053523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "subnet-0c9b29fac4e702f90",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:subnet/subnet-0861ae4c41af30b60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0861ae4c41af30b60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "309656053523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-us-west-2b"
            },
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "subnet-0861ae4c41af30b60",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:subnet/subnet-0013853c42ac1fd33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0013853c42ac1fd33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "309656053523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-public-us-west-2c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-us-west-2c"
            },
            "vpc_id": "vpc-06428e49fa7300f7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "subnet-0013853c42ac1fd33",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309656053523:vpc/vpc-06428e49fa7300f7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fa0feac49c6b622",
            "default_route_table_id": "rtb-0a16ab8c7157af209",
            "default_security_group_id": "sg-019e30e60ebc315fc",
            "dhcp_options_id": "dopt-0d4de947dc0b76e7d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06428e49fa7300f7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a16ab8c7157af209",
            "owner_id": "309656053523",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "309656053523",
            "id": "vpc-06428e49fa7300f7c",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}